# ADB

./: Cargo.toml  Dockerfile  README.md
.ai/: AQL_v0.5_GitHub_Issues_v3_Final.md  ARCHITECTURE.md
adb-cli/: Cargo.toml
adb-cli/src/: main.rs
crates/adb-backends/: Cargo.toml
crates/adb-backends/src/: adb.rs  backend.rs  config.rs  episodic.rs  lib.rs  links.rs  procedural.rs  semantic.rs  tools.rs  working.rs
crates/adb-core/: Cargo.toml
crates/adb-core/src/: error.rs  lib.rs  link.rs  memory.rs  predicate.rs  scope.rs  time.rs
crates/adb-executor/: Cargo.toml
crates/adb-executor/src/: error.rs  executor.rs  lib.rs  result.rs
crates/adb-executor/tests/: integration.rs
crates/adb-mcp/: Cargo.toml
crates/adb-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/adb-server/: Cargo.toml
crates/adb-server/src/: lib.rs
crates/aql-parser/: Cargo.toml
crates/aql-parser/src/: ast.rs  parser.rs
crates/aql-parser/src/grammar/: aql.pest
crates/aql-planner/: Cargo.toml
crates/aql-planner/src/: error.rs  lib.rs  plan.rs  planner.rs
