[package]
name = "adb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for ADB (Agent Database)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
