[package]
name = "adb-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ADB MCP server interface"

[dependencies]
adb-core = { path = "../adb-core" }
adb-backends = { path = "../adb-backends" }
adb-executor = { path = "../adb-executor" }
aql-parser = { path = "../aql-parser" }
aql-planner = { path = "../aql-planner" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
