[package]
name = "adb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ADB server - main database instance"

[dependencies]
adb-core = { path = "../adb-core" }
adb-backends = { path = "../adb-backends" }
aql-parser = { path = "../aql-parser" }
aql-planner = { path = "../aql-planner" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
